--- a/swiftgen.yml
+++ b/swiftgen.yml
@@ -1,13 +1,13 @@
-# strings:
-#   inputs: Netflix-clone/Base.lproj/Localizable.strings
-#   outputs:
-#     - templateName: structured-swift5
-#       output: Netflix-clone/CodeGenerated/strings.swift
-# xcassets:
-#   inputs: Netflix-clone/Assets.xcassets
-#   outputs:
-#     - templateName: swift5
-#       output: Netflix-clone/CodeGenerated/AssetsImages.swift
+strings:
+  inputs: Netflix Clone/Localizable.strings
+  outputs:
+    - templateName: structured-swift5
+      output: Netflix Clone/CodeGenerated/strings.swift
+xcassets:
+  inputs: Netflix Clone/Assets.xcassets
+  outputs:
+    - templateName: swift5
+      output: Netflix Clone/CodeGenerated/AssetsImages.swift
 ib:
   inputs: Netflix Clone/Controllers
   outputs:
@@ -16,7 +16,7 @@ ib:
     - templateName: segues-swift5
       output: Netflix Clone/CodeGenerated/StoryboardSegues.swift
 # colors:
-#   inputs: Color/180517_SK.clr
+#   inputs: Color/180517.clr
 #   outputs:
 #     - templateName: swift5
 #       output: Netflix-clone/CodeGenerated/Colors.swift
